Add Copyright header

--- a/todo-list-with-Azure-backend/tabs/public/auth-end.html
+++ b/todo-list-with-Azure-backend/tabs/public/auth-end.html
@@ -1,3 +1,5 @@
+<!-- Copyright (c) Microsoft Corporation.
+     Licensed under the MIT License. -->
 <!--This file is used during the Teams authentication flow to assist with retrieval of the access token.-->
 <!--If you're not familiar with this, do not alter or remove this file from your project.-->
 <html>
