fix: add header

--- a/share-now/tabs/public/index.html
+++ b/share-now/tabs/public/index.html
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿  <!-- Copyright (c) Microsoft Corporation.
+  Licensed under the MIT License -->
+
+<!DOCTYPE html>
 <html lang="en" style="font-size: 10px">
   <head>
     <meta charset="utf-8" />
