chore(m365): update sdk version for m365 samples

--- a/todo-list-with-Azure-backend-M365/tabs/public/auth-end.html
+++ b/todo-list-with-Azure-backend-M365/tabs/public/auth-end.html
@@ -8,8 +8,8 @@
 
   <body>
     <script
-      src="https://res.cdn.office.net/teams-js/2.0.0-beta.6/js/MicrosoftTeams.min.js"
-      integrity="sha384-zUXDMKhIVeFW07S2xPrtvwSCnfjFTHafmXXzxnNT0ONpSv4NOmekx15PEdsHDDf4"
+      src="https://res.cdn.office.net/teams-js/2.0.0/js/MicrosoftTeams.min.js"
+      integrity="sha384-QtTBFeFlfRDZBfwHJHYQp7MdLJ2C3sfAEB1Qpy+YblvjavBye+q87TELpTnvlXw4"
       crossorigin="anonymous"
     ></script>
     <script
