feat: update auth-end.html and App

--- a/graph-toolkit-one-productivity-hub/tabs/public/auth-end.html
+++ b/graph-toolkit-one-productivity-hub/tabs/public/auth-end.html
@@ -28,7 +28,7 @@
           const msalConfig = {
             auth: {
               clientId: clientId,
-              authority: `https://login.microsoftonline.com/${context.tid}`,
+              authority: `https://login.microsoftonline.com/${context.user.tenant.id}`,
               navigateToLoginRequestUrl: false
             },
             cache: {
