--- a/graph-toolkit-contact-exporter/public/auth-end.html
+++ b/graph-toolkit-contact-exporter/public/auth-end.html
@@ -7,7 +7,11 @@
   </head>
 
   <body>
-  <script src="https://res.cdn.office.net/teams-js/2.7.1/js/MicrosoftTeams.min.js" integrity="sha384-4Gy2G+qxzDVdrdemcVqKVQvaSK1Ghg3x6xcsaMLPc/pw7KPtiogHGM97LTWF2PWg" crossorigin="anonymous"></script>
+    <script
+    src="https://res.cdn.office.net/teams-js/2.0.0/js/MicrosoftTeams.min.js"
+    integrity="sha384-QtTBFeFlfRDZBfwHJHYQp7MdLJ2C3sfAEB1Qpy+YblvjavBye+q87TELpTnvlXw4"
+      crossorigin="anonymous"
+    ></script>
     <script
       type="text/javascript"
       src="https://alcdn.msauth.net/browser/2.21.0/js/msal-browser.min.js"
@@ -23,7 +27,7 @@
           const msalConfig = {
             auth: {
               clientId: clientId,
-              authority: `https://login.microsoftonline.com/${context.user.tenant.id}`,
+              authority: `https://login.microsoftonline.com/${context.tid}`,
               navigateToLoginRequestUrl: false
             },
             cache: {
