--- a/query-org-user-with-message-extension-sso/public/auth-end.html
+++ b/query-org-user-with-message-extension-sso/public/auth-end.html
@@ -35,7 +35,7 @@
 
       // Parse hash parameters into key-value pairs
       function getHashParameters() {
-        let hashParams = {};
+        let hashParams = new Map();
         location.hash
           .substr(1)
           .split("&")
