--- a/live-share-dice-roller/src/index.html
+++ b/live-share-dice-roller/src/index.html
@@ -2,7 +2,7 @@
 <!-- Licensed under the MIT License. -->
 
 <!DOCTYPE html>
-<html lang="en" style="height: 100%">
+<html lang="en" style="height: 100vh">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,8 +12,8 @@
         />
         <title>Fluid Hello World</title>
     </head>
-    <body style="margin: 0; height: 100%">
-        <div id="content" style="min-height: 100%"></div>
+    <body style="margin: 0; height: 100vh">
+        <div id="content" style="max-height: 100vh;overflow-y:hidden"></div>
     </body>
     <script type="module" src="app.js"></script>
 </html>
