--- a/sso-enabled-tab-via-apim-proxy/public/auth-end.html
+++ b/sso-enabled-tab-via-apim-proxy/public/auth-end.html
@@ -1,56 +1,67 @@
+<!-- Copyright (c) Microsoft Corporation.
+     Licensed under the MIT License. -->
 <!--This file is used during the Teams authentication flow to assist with retrieval of the access token.-->
 <!--If you're not familiar with this, do not alter or remove this file from your project.-->
 <html>
-  <head>
+
+<head>
     <title>Login End Page</title>
     <meta charset="utf-8" />
-  </head>
+</head>
 
-  <body>
-    <script
+<body>
+  <script 
     src="https://res.cdn.office.net/teams-js/2.0.0/js/MicrosoftTeams.min.js"
     integrity="sha384-QtTBFeFlfRDZBfwHJHYQp7MdLJ2C3sfAEB1Qpy+YblvjavBye+q87TELpTnvlXw4"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://alcdn.msauth.net/browser/2.21.0/js/msal-browser.min.js"
-      integrity="sha384-s/NxjjAgw1QgpDhOlVjTceLl4axrp5nqpUbCPOEQy1PqbFit9On6uw2XmEF1eq0s"
-      crossorigin="anonymous">
-    </script>
+    crossorigin="anonymous"
+  ></script>
     <script type="text/javascript">
-      var currentURL = new URL(window.location);
-      var clientId = currentURL.searchParams.get("clientId");
+        microsoftTeams.initialize();
+        let hashParams = getHashParameters();
 
-      microsoftTeams.app.initialize().then(() => {
-        microsoftTeams.app.getContext().then(async (context) => {
-          const msalConfig = {
-            auth: {
-              clientId: clientId,
-              authority: `https://login.microsoftonline.com/${context.tid}`,
-              navigateToLoginRequestUrl: false
-            },
-            cache: {
-              cacheLocation: "sessionStorage",
-            },
-          }
-
-          const msalInstance = new window.msal.PublicClientApplication(msalConfig);
-          msalInstance.handleRedirectPromise()
-            .then((tokenResponse) => {
-              if (tokenResponse !== null) {
-                microsoftTeams.authentication.notifySuccess(JSON.stringify({
-                  sessionStorage: sessionStorage
+        if (hashParams["error"]) {
+            // Authentication failed
+            microsoftTeams.authentication.notifyFailure(JSON.stringify({
+                error: hashParams["error"],
+                message: JSON.stringify(hashParams)
+            }));
+        } else if (hashParams["code"]) {
+            // Get the stored state parameter and compare with incoming state
+            let expectedState = localStorage.getItem("state");
+            if (expectedState !== hashParams["state"]) {
+                // State does not match, report error
+                microsoftTeams.authentication.notifyFailure(JSON.stringify({
+                    error: "StateDoesNotMatch",
+                    message: JSON.stringify(hashParams)
                 }));
-              } else {
-                microsoftTeams.authentication.notifyFailure("Get empty response.");
-              }
-            })
-            .catch((error) => {
-              microsoftTeams.authentication.notifyFailure(JSON.stringify(error));
+            } else {
+                // Success -- return to the parent page.
+                // Sending empty result will cause error, so hardcode success here.
+                var result = JSON.stringify({
+                  success: true,
+                })
+                microsoftTeams.authentication.notifySuccess(result);
+            }
+        } else {
+            // Unexpected condition: hash does not contain error or access_token parameter
+            microsoftTeams.authentication.notifyFailure(JSON.stringify({
+                error: "UnexpectedFailure",
+                message: JSON.stringify(hashParams)
+            }));
+        }
+
+        // Parse hash parameters into key-value pairs
+        function getHashParameters() {
+            let hashParams = {};
+            location.hash.substr(1).split("&").forEach(function (item) {
+                let s = item.split("="),
+                    k = s[0],
+                    v = s[1] && decodeURIComponent(s[1]);
+                hashParams[k] = v;
             });
-        });
-      });
+            return hashParams;
+        }
     </script>
-  </body>
+</body>
+
 </html>
