--- a/intelligent-data-chart-generator/index.html
+++ b/intelligent-data-chart-generator/index.html
@@ -5,7 +5,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
     />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <link
       rel="stylesheet"
       href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css"
@@ -16,5 +16,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
